--- a/project/package.json
+++ b/project/package.json
@@ -2,9 +2,11 @@
   "name": "project",
   "version": "1.0.0",
   "description": "Desafio back-end",
-  "main": "index.js",
+  "main": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node .",
+    "dev": "nodemon ."
   },
   "repository": {
     "type": "git",
@@ -19,6 +21,7 @@
   "homepage": "https://github.com/camila-dornas/desafio-back#readme",
   "devDependencies": {
     "eslint": "^8.16.0",
+    "eslint-config-google": "^0.14.0",
     "nodemon": "^2.0.16"
   },
   "dependencies": {
