--- a/project/package.json
+++ b/project/package.json
@@ -2,7 +2,7 @@
   "name": "project",
   "version": "1.0.0",
   "description": "Desafio back-end",
-  "main": "",
+  "main": "./src/api/routes",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node .",
@@ -25,8 +25,11 @@
     "nodemon": "^2.0.16"
   },
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
+    "md5": "^2.3.0",
     "mongoose": "^6.3.4"
   }
 }
