--- a/project/package.json
+++ b/project/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/camila-dornas/desafio-back#readme",
   "devDependencies": {
+    "@types/swagger-ui-express": "^4.1.3",
     "eslint": "^8.16.0",
     "eslint-config-google": "^0.14.0",
     "nodemon": "^2.0.16"
@@ -31,6 +32,7 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
-    "mongoose": "^6.3.4"
+    "mongoose": "^6.3.4",
+    "swagger-ui-express": "^4.4.0"
   }
 }
