--- a/project/package.json
+++ b/project/package.json
@@ -28,11 +28,14 @@
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "axios": "^0.27.2",
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
     "mongoose": "^6.3.4",
+    "sinon": "^14.0.0",
     "swagger-ui-express": "^4.4.0"
   }
 }
